# Pomlet

./: .gitignore  Pomlet.spec  Pomodoro.spec  README.md  main.py  main.spec  pomodoro_config.json  pyproject.toml
assets/: assets.qrc
data/: DevOps.csv  Theoretical Computer Science.csv
legacy/: PomodoroTimer.py
src/: calendar_manager.py  config.py  pomodoro.py  questions_manager.py  sound.py
src/gui/: assets.py  pomodoro.py  style.css  tray.py
src/gui/tabs/: add_flashcard.py  list_flashcard.py  review_flashcard.py
src/gui/tabs/timer/: progress_circle.py  timer.py
src/utils/: converter.py
