[project]
name = "pomodoro"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pillow>=11.1.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]
